--- a/package.json
+++ b/package.json
@@ -1,33 +1,32 @@
 {
-  "name": "nebula",
+  "name": "cosmo-db",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "license": "MIT",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "build": "rm -rf lib/ && tsc"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.49.1",
-    "@tailwindcss/vite": "^4.0.9",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.9"
+    "@subsquid/evm-abi": "^0.3.1",
+    "@subsquid/evm-processor": "^1.27.0",
+    "@subsquid/graphql-server": "^4.9.0",
+    "@subsquid/typeorm-migration": "^1.3.0",
+    "@subsquid/typeorm-store": "^1.5.1",
+    "@subsquid/util-internal": "^3.2.0",
+    "dotenv": "^16.4.7",
+    "ethers": "^6.13.4",
+    "hono": "^4.6.15",
+    "ofetch": "^1.4.1",
+    "pg": "^8.13.1",
+    "typeorm": "^0.3.20",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "daisyui": "^5.0.0-beta.8",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
+    "@subsquid/evm-typegen": "^4.3.0",
+    "@subsquid/squid-gen-evm": "^2.0.0",
+    "@subsquid/typeorm-codegen": "^2.0.2",
+    "@types/node": "^20.17.0",
+    "@types/pg": "^8.11.10",
+    "typescript": "~5.7.2"
   }
 }
