--- a/nebula/package.json
+++ b/nebula/package.json
@@ -12,11 +12,12 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.49.1",
     "@tailwindcss/vite": "^4.0.9",
+    "@tanstack/react-virtual": "^3.13.4",
     "alchemy-sdk": "^3.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.3.0",
-    "tailwindcss": "^4.0.9"
+        "react-router": "^7.3.0",
+        "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
