--- a/nebula/package.json
+++ b/nebula/package.json
@@ -21,9 +21,11 @@
     "@tailwindcss/vite": "^4.0.9",
     "@tanstack/react-virtual": "^3.13.4",
     "alchemy-sdk": "^3.5.3",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "express": "^4.21.2",
     "hugeicons-react": "^0.3.0",
     "lucide-react": "^0.482.0",
     "react": "^19.0.0",
